Fix over layout issue

--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,9 @@
 
 body {
   text-align: center;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h1,
@@ -35,13 +37,14 @@ a {
   width: 100%;
 }
 
-main {
+.center {
+  transform: translateY(100%);
 }
 
 /* player section */
 
 .player-section {
-  /* display: none; */
+  display: none;
 }
 
 .player-options {
@@ -89,21 +92,20 @@ main {
 .button {
   border: none;
   border-radius: 0.5rem;
-  padding: 1rem 2rem;
+  padding: 1rem 5rem;
   font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase;
   background-color: violet;
-  display: none;
+  margin: auto 0;
+  /* display: none; */
 }
 
 /* Footer section */
 footer {
   font-size: 0.8rem;
   letter-spacing: 2px;
-  width: 100%;
-  position: sticky;
-  bottom: 0;
+  margin-top: auto;
   background-color: black;
   color: white;
 }
